[gd_scene load_steps=21 format=3 uid="uid://cr3fciq260ss8"]

[ext_resource type="Script" path="res://src/spaceship/spaceship.gd" id="1_2sslo"]
[ext_resource type="Texture2D" uid="uid://du5u16rhg4u2i" path="res://assets/spaceship/tripulacao.png" id="2_cvoyj"]
[ext_resource type="Texture2D" uid="uid://q3x7sv0rnvm3" path="res://assets/spaceship/catioro e nave sem cachecol.png" id="3_1cq7r"]
[ext_resource type="Texture2D" uid="uid://bhc03rcrnnc17" path="res://assets/spaceship/pointer.png" id="3_4qkpf"]
[ext_resource type="Texture2D" uid="uid://1222s0rp3xmg" path="res://assets/spaceship/catioro e nave.png" id="4_oa4pf"]
[ext_resource type="Texture2D" uid="uid://dco5nvyy2ofpg" path="res://assets/characters/catioromapa.png" id="4_qheor"]
[ext_resource type="Script" path="res://src/spaceship/zoom_agnostic_sprite.gd" id="4_tmfj7"]
[ext_resource type="AudioStream" uid="uid://b63r5cdvp5r4u" path="res://assets/audio/sfx/dash.wav" id="4_x0m3s"]
[ext_resource type="Texture2D" uid="uid://buxmf34pw5k6c" path="res://assets/spaceship/pegue o pombo.png" id="6_kl11j"]
[ext_resource type="Texture2D" uid="uid://ru8s7wlxs8kc" path="res://assets/spaceship/cafezinho.png" id="7_1rper"]
[ext_resource type="Texture2D" uid="uid://bq2w4qql7vm7t" path="res://assets/misc/smoke.png" id="7_yieva"]
[ext_resource type="Texture2D" uid="uid://dpec0si3ri6da" path="res://assets/spaceship/coracao.png" id="8_y8qia"]
[ext_resource type="Texture2D" uid="uid://bg2s7l0in50mm" path="res://assets/spaceship/banananaa nft.png" id="9_bvsyv"]
[ext_resource type="Texture2D" uid="uid://cqtiymw1umb6g" path="res://assets/spaceship/escultura.png" id="10_6k7tq"]
[ext_resource type="Texture2D" uid="uid://d33fr6yo60cio" path="res://assets/spaceship/cachecol.png" id="11_2lk3n"]
[ext_resource type="Texture2D" uid="uid://do8hrk1w4k4tc" path="res://assets/spaceship/polvo.png" id="12_qlwj2"]
[ext_resource type="AudioStream" uid="uid://c7ai6j5hprfr4" path="res://assets/audio/sfx/boost.wav" id="16_bdjiw"]

[sub_resource type="Animation" id="Animation_qe5fp"]
resource_name = "Smoke"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmokeSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("16_bdjiw")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_moe5c"]
_data = {
"Smoke": SubResource("Animation_qe5fp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gvj4"]
size = Vector2(53.882, 36.3354)

[node name="Spaceship" type="CharacterBody2D"]
script = ExtResource("1_2sslo")
ACCELERATION_STRENGTH = 4.0
MAX_SPEED = 400.0
DASH_SPEED = 2.0
hugo_sprite = ExtResource("2_cvoyj")
without_scarf_sprite = ExtResource("3_1cq7r")

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x0m3s")
volume_db = -8.0
bus = &"SFX"

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_oa4pf")

[node name="SmokeCloud" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(-282, 35)
texture = ExtResource("7_yieva")
hframes = 3
frame = 2

[node name="SmokeSound" type="AudioStreamPlayer" parent="Sprite/SmokeCloud"]
stream = ExtResource("16_bdjiw")
volume_db = -16.0
bus = &"SFX"

[node name="SmokeAnimation" type="AnimationPlayer" parent="Sprite/SmokeCloud"]
unique_name_in_owner = true
autoplay = "Smoke"
libraries = {
"": SubResource("AnimationLibrary_moe5c")
}

[node name="Souvenirs" type="Node2D" parent="Sprite"]

[node name="Sprite2D" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("6_kl11j")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("7_1rper")

[node name="Sprite2D3" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("8_y8qia")

[node name="Sprite2D4" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("9_bvsyv")

[node name="Sprite2D5" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("10_6k7tq")

[node name="Sprite2D6" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("11_2lk3n")

[node name="Sprite2D7" type="Sprite2D" parent="Sprite/Souvenirs"]
visible = false
texture = ExtResource("12_qlwj2")

[node name="Pointer" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1

[node name="Pointer" type="Sprite2D" parent="Pointer"]
rotation = 4.71239
texture = ExtResource("3_4qkpf")
offset = Vector2(0, -256)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14.5, -1)
scale = Vector2(6.44, 6.44)
shape = SubResource("RectangleShape2D_5gvj4")
metadata/_edit_lock_ = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ZoomSprite" type="Sprite2D" parent="."]
position = Vector2(7, 164)
texture = ExtResource("4_qheor")
script = ExtResource("4_tmfj7")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
